# Phobos

./: .editorconfig  .envrc  .gitignore  .rustfmt.toml  BATCH_PROCESSING_GUIDE.md  BENCHMARK_RESULTS.md  BUILD_OPTIMIZATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXES_SUMMARY.md  GPU_ACCELERATION.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_VENDOR_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Makefile  OPTIMIZATION_CHANGELOG.md  PORT_ACCURACY_COMPARISON.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  RUSTSCAN_OPTIMIZATIONS.md  RUSTSCAN_REAL_IMPLEMENTATION.md  RUSTSCAN_SPEED_OPTIMIZATION.md  SECURITY.md  SPEED_BENCHMARK_RESULTS.md  ULTRA_SPEED_RESULTS.md  benchmark_rustscan_comparison.sh  build.rs  clippy.toml  config.toml  create_prs.sh  default.nix  deny.toml  flake.nix  install_linux.sh  install_macos.sh  install_windows.ps1  (+6 more)
.github/workflows/: CONTRIBUTING.md  SECURITY.md
.github/workflows/workflows/: release.yml
.kiro/steering/: product.md  structure.md  tech.md
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benches/: performance.rs
benchmark_results/: comparison_report_20251010_193310.txt  comparison_report_20251010_193402.txt  comparison_report_20251010_193513.txt  comparison_report_20251010_194225.txt  comparison_report_20251010_194941.txt  phobos_test1_20251010_193513.txt  phobos_test1_20251010_194225.txt  phobos_test1_20251010_194941.txt  phobos_test2_20251010_193513.txt  phobos_test2_20251010_194225.txt  phobos_test2_20251010_194941.txt  phobos_test3_20251010_193513.txt  phobos_test3_20251010_194225.txt  phobos_test3_20251010_194941.txt  rustscan_test1_20251010_193513.txt  rustscan_test2_20251010_193513.txt  rustscan_test3_20251010_193402.txt  rustscan_test3_20251010_194941.txt
completions/: phobos.bash  phobos.fish  phobos.zsh
docs/: MODULAR_ARCHITECTURE.md  modular_architecture.md
examples/: README.md  adaptive_scan.rs  batch_scanning.rs  comprehensive_test.rs  gpu_scan.rs  stealth_scan.rs
fixtures/: README.md  phobos_scripts.toml
fixtures/scripts/: http_grabber.py  ssh_banner.sh
fixtures/test_targets/: hosts.txt
man/: phobos.1
payloads/: udp-payloads.txt
scripts/: build.sh
src/: benchmark.rs  config.rs  error.rs  lib.rs  main.rs  top_ports.rs
src/adaptive/: learning.rs  mod.rs  optimizer.rs  predictor.rs  storage.rs
src/core/: mod.rs  scanner_trait.rs
src/discovery/: engine.rs  ipv6.rs  methods.rs  mod.rs  os_detection.rs
src/engines/: mod.rs
src/gpu/: mod.rs  opencl.rs
src/gpu/vendors/: amd.rs  apple.rs  intel.rs  mod.rs  nvidia.rs
src/history/: mod.rs
src/intelligence/: asset_management.rs  benchmark_tests.rs  core.rs  distributed.rs  mod.rs  network_discovery.rs  os_fingerprinting.rs  performance.rs  service_detection.rs  service_detection_tests.rs  smart_prediction.rs  tests.rs
src/network/: icmp.rs  mod.rs  packet.rs  phobos_modes.rs  protocol.rs  socket.rs  stealth.rs
src/output/: mod.rs
src/scanner/: engine.rs  mod.rs  techniques.rs  udp.rs  ultra_engine.rs
src/scripts/: engine.rs  executor.rs  mod.rs  nmap.rs  parser.rs
src/utils/: adaptive_performance.rs  address_exclusions.rs  address_parser.rs  config.rs  file_input.rs  mod.rs  port_exclusions.rs  profiles.rs  scan_options.rs  target_parser.rs  timing.rs
tests/: comprehensive_performance_test.rs  error_handling_tests.rs  history_test.rs  integration_tests.rs  network_tests.rs  performance_tests.rs  port_accuracy_test.rs  scanning_methods_test.rs  security_tests.rs  stability_24h.sh  stress_tests.rs
workflows/: ci.yml
