[package]
name = "phobos"
version = "1.0.0"
edition = "2021"
authors = ["ibrahimsql"]
description = "Phobos: The Blazingly Fast Rust-Based Port Scanner That Outspeeds Nmap & Masscan"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
pnet = "0.33"
socket2 = "0.5"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-util = "0.7"
bytes = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"
colored = "2.0"
indicatif = "0.17"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.0"

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1