[package]
name = "phobos"
version = "1.1.1"
edition = "2021"
authors = ["ibrahimsql"]
description = "Phobos: The Blazingly Fast Rust-Based Port Scanner That Outspeeds Nmap & Masscan"
license = "MIT"
repository = "https://github.com/ibrahmsql/phobos"
homepage = "https://github.com/ibrahmsql/phobos"
keywords = ["port-scanner", "network", "security", "rust", "nmap"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
publish = ["github-packages"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
pnet = "0.33"
socket2 = "0.5"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-util = "0.7"
bytes = "1.0"
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"
colored = "2.0"
indicatif = "0.17"
openssl = { version = "0.10", features = ["vendored"] }
rlimit = "0.10"
# Network Intelligence System dependencies
ipnetwork = "0.20"
num_cpus = "1.16"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
async-trait = "0.1"
lazy_static = "1.4"
rayon = "1.8"
tempfile = "3.8"



[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.0"

[[bench]]
name = "performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Registry configuration removed